Fix soon label overflow

--- a/client/src/app/pages/main/gamemodes/gamemodes.component.scss
+++ b/client/src/app/pages/main/gamemodes/gamemodes.component.scss
@@ -4,6 +4,10 @@
   padding: 5rem 0 0.5rem;
 }
 
+.gamemodes-section .container {
+  width: 90%;
+}
+
 .lead {
   min-height: 5rem;
 }
